# unifi-echobell-webhook

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.portainer.yaml  compose.yaml  pyproject.toml
.github/workflows/: docker.yml
tests/: test_payload.py  test_service.py  test_unifi.py
unifi_webhook/: __init__.py  config.py  echobell.py  payload.py  server.py  service.py  storage.py  unifi.py
