[project]
name = "unifi-echobell-webhook"
version = "0.1.0"
description = "Notify EchoBell only the first time a UniFi client connects"
requires-python = ">=3.13,<4.0"
dependencies = []

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
